2001-02-14  Eric Fischer <eric@eazel.com>

	* nautilus-installer/install-lib/Makefile.am:
	Gmake seems to have trouble recognizing .c -> .o dependencies
	when the .c files don't appear until after the make has begun,
	so explicitly add the rpm3 and rpm4 dependencies.

2001-02-13  Eskil Heyn Olsen  <eskil@eazel.com>

	reviewed by: Robey Pointer  <robey@eazel.com>

	* components/services/install/command-line/eazel-alt-install-corba.
	c: (eazel_file_conflict_check_signal),
	(eazel_file_uniqueness_check_signal),
	(eazel_feature_consistency_check_signal), (something_failed),
	(eazel_preflight_check_signal), (dep_check), (md5_check_failed),
	(delete_files):
	Added --silent, suppresses random spewage.
	Added autocont, so if there was multiple problems, answering y to
	first "continue y/n ?" will answer y to all.
	Fixed for the modified preflight signal.
	
	* components/services/install/lib/eazel-install-corba-types.c:
	(corba_packagedatastruct_fill_from_packagedata),
	(packagedata_from_corba_packagedatastruct):
	* components/services/install/lib/eazel-install-corba-callback.c:
	(impl_preflight_check), (eazel_install_callback_class_initialize):
	* components/services/install/lib/eazel-install-corba-callback.h:
	* components/services/install/idl/trilobite-eazel-install.idl:
	Changed preflight to take the operation type as argument.
	Added modification status to the corba version of package data.
	
	* components/services/install/lib/eazel-install-logic2.c:
	(prune_failed_packages_helper),
	(eazel_install_check_existing_packages), (get_softcat_info),
	(is_satisfied), (check_dependencies_foreach),
	(do_file_conflict_check), (execute),
	(eazel_uninstall_upward_traverse), (install_packages):
	Fixed bug 3511, 4502 (libeazelinstall part, view still needs
	stuff).
	
	* components/services/install/lib/eazel-install-public.h:
	* components/services/install/lib/eazel-install-object.c:
	(eazel_install_install_packages), (eazel_install_init_transaction),